banner and about added

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
 .App {
   font-family: 'Merriweather', serif;
   text-align: center;
+  overflow: hidden;
+  background-image: linear-gradient(black,black);
 }
 
 .App-logo {
